# advent-of-code-2025

./: .gitattributes  .gitignore  README  README.md  advent-of-code-2025.cabal  aoc  aoc2025.cabal  collect_z3_output.sh  generate_smt_files.hs  sum_z3_results.hs
inputs/day01/: expected.txt  sample.txt
inputs/day02/: expected.txt  input.txt  sample.txt
inputs/day03/: expected.txt
inputs/day04/: expected.txt
inputs/day05/: expected.txt  sample.txt
inputs/day06/: expected.txt  input.txt  sample.txt
inputs/day07/: expected.txt  input.txt  sample.txt
inputs/day08/: expected.txt  input.txt  sample.txt
inputs/day09/: expected.txt  input.txt  sample.txt
inputs/day10/: expected.txt  input.txt  sample.txt
inputs/day11/: expected.txt  input.txt  sample.txt
src/: AoCUtils.hs  Day01A.hs  Day01B.hs  Day02A.hs  Day02B.hs  Day03A.hs  Day03B.hs  Day04A.hs  Day04B.hs  Day05A.hs  Day05B.hs  Day06A.hs  Day06B.hs  Day07A.hs  Day07B.hs  Day08A.hs  Day08B.hs  Day09A.hs  Day09B.hs  Day10A.hs  Day10B.hs  Day11A.hs  Day11B.hs  Day12A.hs  Day12B.hs  Main.hs  template.hs
src/01a/: script.hs
src/01b/: script.hs
src/02a/: script.hs
src/02b/: script.hs
src/03a/: script.hs
src/03b/: script.hs
src/AoCDays/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06-readable.hs  Day06.hs  Day07-gross.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs
src/AoCRunner/: AoCCLI.hs  AoCDisplay.hs  AoCExecution.hs  AoCFiles.hs  AoCRegistry.hs
src/AoCUtils/: AoCGrid.hs  AoCList.hs  AoCParsing.hs  AoCRange.hs  AoCTuple.hs
src/Day01/: Day01.hs  input.txt  sample.txt
src/Day02/: Day02.hs
src/Day03/: Day03.hs  input.txt  sample.txt
src/Day04/: Day04.hs  input.txt  sample.txt
src/Day05/: Day05.hs  input.txt
src/Day06/: Day06.hs
src/Day07/: Day07.hs
src/Day08/: Day08.hs  sample.txt
src/Day09/: Day09.hs
src/Day10/: Day10.hs
src/Day11/: Day11.hs
src/Day12/: Day12.hs
