cabal-version: 3.12
name: aoc2025
version: 0.1.0.0
synopsis: Advent of Code 2025 Solutions
description: Solutions for Advent of Code 2025 puzzles
category: Application
build-type: Simple

executable aoc
    main-is: Main.hs
    other-modules:
        Day01A, Day01B,
        Day02A, Day02B,
        Day03A, Day03B,
        Day04A, Day04B,
        Day05A, Day05B,
        Day06A, Day06B,
        Day07A, Day07B,
        Day08A, Day08B,
        Day09A, Day09B,
        Day10A, Day10B,
        Day11A, Day11B,
        Day12A, Day12B
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wall -Wextra -Werror=incomplete-patterns -Werror=missing-signatures -Wmissing-home-modules
    build-depends: 
        base >= 4.7 && < 5,
        containers,
        directory,
        filepath,
        regex-posix,
        time