cabal-version: 3.12
name: aoc2025
version: 0.1.0.0
synopsis: Advent of Code 2025 Solutions
description: Solutions for Advent of Code 2025 puzzles
category: Application
build-type: Simple

executable aoc
    main-is: Main.hs
    other-modules:
        AoCUtils,
        Day01.Day01, Day02.Day02, Day03.Day03, Day04.Day04,
        Day05.Day05, Day06.Day06, Day07.Day07, Day08.Day08,
        Day09.Day09, Day10.Day10, Day11.Day11, Day12.Day12
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wall -Wextra -Werror=incomplete-patterns -Werror=missing-signatures -Wmissing-home-modules
    build-depends: 
        base >= 4.7 && < 5,
        containers,
        directory,
        filepath,
        regex-posix,
        time
