cabal-version: 3.12
name: aoc2025
version: 0.1.0.0
synopsis: Advent of Code 2025 Solutions
description: Solutions for Advent of Code 2025 puzzles
category: Application
build-type: Simple

executable aoc
    main-is: Main.hs
    other-modules:
        AoCUtils.AoCParsing, AoCUtils.AoCGrid, AoCUtils.AoCList, AoCUtils.AoCRange,
        AoCRunner.AoCDisplay, AoCRunner.AoCCLI, AoCRunner.AoCRegistry, AoCRunner.AoCExecution, AoCRunner.AoCFiles,
        AoCDays.Day01, AoCDays.Day02, AoCDays.Day03, AoCDays.Day04,
        AoCDays.Day05, AoCDays.Day06, AoCDays.Day07, AoCDays.Day08,
        AoCDays.Day09, AoCDays.Day10, AoCDays.Day11, AoCDays.Day12
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wall -Wextra -Werror=incomplete-patterns -Werror=missing-signatures -Wmissing-home-modules
    build-depends: 
        base >= 4.7 && < 5,
        containers,
        directory,
        filepath,
        regex-posix,
        time
